2020-07-15  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Recreate CWEB boot modules.

2020-07-08  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin,
	* help.h: Add /old/ option '-dN' to 'help' message.

2020-07-06  Karl Berry  <karl@freefriends.org>

	* tex.ch (<Get user's advice...>): return early if
	interaction<>error_stop_mode; else a nested error()
	call in unusual interactive sequences can mess up
	the selector value, ultimately causing a segmentation fault
	from writing to a closed stream \write15. Fix primarily
	from David Fuchs.
	https://tex.stackexchange.com/questions/551313/
	https://tug.org/pipermail/tex-live/2020-June/045876.html

2020-06-22  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (Runtime options): move from install.texi,
	and mention expand_depth and texmf_casefold_search.
	(Three programs): make its own chapter to reduce sectioning depth.
	Various historical and current updates, e.g., mention (u)pTeX.
	* doc/install.texi (Runtime options): moved.
	* doc/ref.txi: remove some older references, use https for urls.

2020-06-20  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Regenerate boot module.

2020-06-16  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: Regenerate boot module.

2020-06-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* gftodvi.ch: Suppress a compiler warning.

2020-06-10  Andreas Scherer  <https://ascherer.github.io>

	* bibtex.ch,
	* gftodvi.ch,
	* gftopk.ch,
	* pktogf.ch,
	* pltotf.ch,
	* tftopl.ch,
	* vftovp.ch: Avoid line breaks in sections with empty TeX part.

2020-06-10  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Missing forced line break.

2020-06-09  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Max out array sizes similar to CWEB.

2020-06-07  Karl Berry  <karl@freefriends.org>

	* ac/web2c.ac: omit $Id$ from output.

2020-06-07  Andreas Scherer  <https://ascherer.github.io>
