@@ -1,3 +1,7 @@
+2020-07-17  Andreas Scherer  <https://ascherer.github.io>
+
+	* am/pdftex.am: Avoid changefile ambiguity.
+
 2020-06-11  Thanh Han The  <hanthethanh@gmail.com>
 
 	* pdftex.web (Create link annotations...): check for gen_running_link.
