@@ -1,3 +1,8 @@
+2020-07-17  Andreas Scherer  <https://ascherer.github.io>
+
+	* Makefile.am,
+	* Makefile.in: Avoid changefile ambiguity.
+
 2020-07-15  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctangleboot.cin,
